# interpreter

./: .gitignore  CMakeLists.txt  README.md  ast.h  lexer.h  main.cpp  parser.h
src/: CMakeLists.txt  analyzer.h  ast.h  call_stack.h  evaluator.h  execution_stack.h  lexer.h  main.cpp  parser.h  scope.h
test/: CMakeLists.txt  analyzer_tests.cpp  check.sh  cwd.h  evaluator_tests.cpp  parser_tests.cpp  tests.cpp
test/files/: Error01.txt  Error03.txt  Error04_for.txt  Error05_for.txt  Error06_for.txt  Error07_for.txt  Error08_for.txt  Error09_for.txt  Error10_for.txt  Error11_for.txt  Error12_for.txt  Error13_while.txt  Error14_while.txt  Error15_while.txt  Error16_while.txt  Error17_while.txt  Error18_if.txt  Error19_if.txt  Error20_if.txt  Error21_if.txt  Error22_if.txt  Error23_if.txt  Error24_if.txt  Error25_func.txt  Error26_func.txt  Error27_func.txt  Error28_func.txt  Error29_func.txt  Error30_func.txt  Error31_expression.txt  Error32_expression.txt  Error33_expression.txt  Error34_expression.txt  Error35_expression.txt  Error36_expression.txt  Error38_expression.txt  Error39_expression.txt  Error41_expression.txt  Error42_expression.txt  Error43_expression.txt  (+25 more)
test_files/: Euclid.txt  Fibonacci.txt  Perfect.txt  Pointless.txt  Prime.txt
